--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "file-saver": "^2.0.5",
         "ng2-toastr": "^4.1.2",
         "ngx-echarts": "^5.2.2",
+        "ngx-qrcode-styling": "^1.1.7",
         "ngx-toastr": "^12.0.1",
         "radium": "^0.26.2",
         "rxjs": "^6.3.3",
