--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "devDependencies": {
         "@angular/cli": "^14.1.1",
         "@types/echarts": "^4.9.16",
+        "@types/google.maps": "^3.51.0",
         "@types/node": "^12.0.7",
         "angular2-template-loader": "^0.6.2",
         "css-loader": "^2.1.1",
