--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "core-js": "^3.1.3",
         "echarts": "^4.9.0",
         "file-saver": "^2.0.5",
+        "jwt-decode": "^3.1.2",
         "ng2-toastr": "^4.1.2",
         "ngx-echarts": "^5.2.2",
         "ngx-qrcode-styling": "^1.1.7",
@@ -38,6 +39,7 @@
         "@types/node": "^12.0.7",
         "angular2-template-loader": "^0.6.2",
         "css-loader": "^2.1.1",
+        "file-loader": "^6.2.0",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "less": "^3.0.4",
