--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/router": "^8.0.0",
         "core-js": "^3.1.3",
         "file-saver": "^2.0.5",
+        "jw-angular-pagination": "^1.2.0",
         "jwt-decode": "^3.1.2",
         "ng2-toastr": "^4.1.2",
         "ngx-qrcode-styling": "^1.1.7",
