--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "core-js": "^3.1.3",
         "echarts": "^4.9.0",
         "file-saver": "^2.0.5",
+        "net": "^1.0.2",
         "ng2-toastr": "^4.1.2",
         "ngx-echarts": "^5.2.2",
         "ngx-qrcode-styling": "^1.1.7",
@@ -29,6 +30,8 @@
         "or": "^0.2.0",
         "radium": "^0.26.2",
         "rxjs": "^6.3.3",
+        "sockjs-client": "^1.3.0",
+        "stompjs": "^2.3.3",
         "zone.js": "^0.9.1"
     },
     "devDependencies": {
