--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
         "@angular/platform-browser": "^8.0.0",
         "@angular/platform-browser-dynamic": "^8.0.0",
         "@angular/router": "^8.0.0",
+        "@stomp/stompjs": "^7.0.0",
         "core-js": "^3.1.3",
         "file-saver": "^2.0.5",
         "jw-angular-pagination": "^1.2.0",
         "jwt-decode": "^3.1.2",
+        "net": "^1.0.2",
         "ng2-toastr": "^4.1.2",
         "ngx-qrcode-styling": "^1.1.7",
         "ngx-toastr": "^11.3.3",
         "or": "^0.2.0",
         "radium": "^0.26.2",
         "rxjs": "^6.3.3",
+        "stompjs": "^2.3.3",
         "zone.js": "^0.9.1"
     },
     "devDependencies": {
